User can view more tweets as they scroll with infinite pagination

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="login_label">Connect to Twitter</string>
     <string name="action_setting">Settings</string>
     <string name="title_activity_timeline">Home Timeline</string>
-
+    <string name="Username">Example Name</string>
 
 
 </resources>
