--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="timestamp">15 minutes ago</string>
     <string name="post_tweet">Tweet</string>
     <string name="twitter_profile_image">Profile Image</string>
-    <string name="hint_etComposeTweet">Whats Happening?</string>
-    <string name="fragment_compose_title">Whats Happening?</string>
+    <string name="hint_etComposeTweet">What\'s Happening?</string>
+    <string name="fragment_compose_title">What\'s Happening?</string>
     <string name="compose_action">Compose tweet</string>
 
 
