--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,14 @@
     <string name="tvUserName">Edwin Peraza</string>
     <string name="tvScreenName">\@edwinperaza</string>
     <string name="tvDescription">Profile Description...</string>
-    <string name="tvFollowers">10 Followers</string>
-    <string name="tvFollowing">8 Following</string>
 
+    <string name="tvFollowers">10 Followers</string>
+    <string name="Followers">Followers</string>
+    <string name="error_fetch_followers">Error Fetching Followers</string>
+
+
+    <string name="Following">Following</string>
+    <string name="tvFollowing">8 Following</string>
+    <string name="error_fetch_followings">Error Fetching Followings</string>
 
 </resources>
